# numhask-backprop

./: .gitignore  .hlint.yaml  numhask-backprop.cabal  package.yaml  readme.md  stack.yaml
app/: example.hs
other/: _readme.md  answer.md
src/NumHask/: Backprop.hs  KTuple.hs  Wrapped.hs
src/NumHask/Backprop/: Orphans.hs
src/NumHask/Space/: Backprop.hs
test/: test.hs
