cabal-version: 2.0
name:           numhask-backprop
version:        0.0.1
synopsis:       See readme.md
description:    See readme.md for description.
category:       project
homepage:       https://github.com/tonyday567/numhask-backprop#readme
bug-reports:    https://github.com/tonyday567/numhask-backprop/issues
author:         Tony Day
maintainer:     tonyday567@gmail.com
copyright:      Tony Day (c) 2017
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    stack.yaml

source-repository head
  type: git
  location: https://github.com/tonyday567/numhask-backprop

library
  exposed-modules:
      NumHask.KTuple
      NumHask.Backprop.Orphans
      NumHask.Backprop
  hs-source-dirs:
      src
  default-extensions: NegativeLiterals NoImplicitPrelude OverloadedStrings UnicodeSyntax
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  build-depends:
      QuickCheck
    , backprop
    , base >=4.7 && <5
    , numhask
    , numhask-prelude
    , random
    , lens
  default-language: Haskell2010

executable numhask-backprop
  main-is: example.hs
  hs-source-dirs:
      app
  default-extensions: NegativeLiterals NoImplicitPrelude OverloadedStrings UnicodeSyntax
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -funbox-strict-fields -fforce-recomp -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      backprop
    , base >=4.7 && <5
    , numhask
    , numhask-backprop
    , numhask-prelude
    , protolude
    , random
    , lens
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs:
      test
  default-extensions: NegativeLiterals NoImplicitPrelude OverloadedStrings UnicodeSyntax
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  build-depends:
      backprop
    , base >=4.7 && <5
    , doctest
    , hedgehog
    , numhask-backprop
    , numhask-hedgehog
    , numhask-prelude
    , tasty
    , lens
  default-language: Haskell2010
