cabal-version: 2.0
name:           numhask-backprop
version:        0.0.2
synopsis:       See readme.md
description:    See readme.md for description.
category:       project
homepage:       https://github.com/tonyday567/numhask-backprop#readme
bug-reports:    https://github.com/tonyday567/numhask-backprop/issues
author:         Tony Day
maintainer:     tonyday567@gmail.com
copyright:      Tony Day (c) 2017
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    stack.yaml

source-repository head
  type: git
  location: https://github.com/tonyday567/numhask-backprop

library
  exposed-modules:
    NumHask.KTuple
    NumHask.Backprop
    NumHask.Space.Backprop
  hs-source-dirs:
    src
  default-extensions:
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -fwrite-ide-info
    -hiedir=.hie
  build-depends:
    backprop >= 0.2.6 && < 0.2.7,
    base >=4.7 && <5,
    numhask >= 0.7 && < 0.8,
    numhask-space >= 0.7 && < 0.8,
    vinyl >= 0.13 && < 0.14

  default-language: Haskell2010

